syntax = "proto3";
option java_multiple_files = true;
package voucher;
option java_package = "org.retrade.proto.voucher";
option java_outer_classname = "VoucherServiceProto";

enum VoucherTypeProto {
  VOUCHER_TYPE_UNSPECIFIED = 0;
  PERCENTAGE = 1;
  FIXED_AMOUNT = 2;
}

enum VoucherStatusProto {
  VOUCHER_STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;
  USED = 2;
  EXPIRED = 3;
  INACTIVE = 4;
}

message VoucherDetails {
  string id = 1;
  string code = 2;
  VoucherTypeProto type = 3;
  double discount = 4;
  string start_date = 5;
  string expiry_date = 6;
  bool active = 7;
  int32 max_uses = 8;
  int32 max_uses_per_user = 9;
  int32 current_uses = 10;
  int32 min_spend = 11;
  repeated string product_restrictions = 12;
}

message VoucherClaimProto {
  string id = 1;
  string voucher_id = 2;
  string code = 3;
  VoucherTypeProto type = 4;
  double discount = 5;
  string expiry_date = 6;
  VoucherStatusProto status = 7;
}

message CreateVoucherRequest {
  string code = 1;
  VoucherTypeProto type = 2;
  double discount = 3;
  string start_date = 4;
  string expiry_date = 5;
  bool active = 6;
  int32 max_uses = 7;
  int32 max_uses_per_user = 8;
  int32 min_spend = 9;
  repeated string product_restrictions = 10;
}

message CreateVoucherResponse {
  bool success = 1;
  string message = 2;
  VoucherDetails voucher = 3;
}

message ClaimVoucherRequest {
  string code = 1;
  string account_id = 2;
}

message ClaimVoucherResponse {
  bool success = 1;
  string message = 2;
  VoucherClaimProto voucher_claim = 3;
}

message ValidateVoucherRequest {
  string code = 1;
  string account_id = 2;
  double order_total = 3;
  repeated string product_ids = 4;
}

message ValidateVoucherResponse {
  bool valid = 1;
  string message = 2;
  string voucher_id = 3;
  string code = 4;
  double discount_amount = 5;
  VoucherTypeProto type = 6;
}

message ApplyVoucherRequest {
  string code = 1;
  string account_id = 2;
  string order_id = 3;
  double order_total = 4;
}

message ApplyVoucherResponse {
  bool success = 1;
  string message = 2;
  double discount_amount = 3;
  VoucherTypeProto type = 4;
}

message GetUserVouchersRequest {
  string account_id = 1;
  bool active_only = 2;
}

message GetUserVouchersResponse {
  bool success = 1;
  string message = 2;
  repeated VoucherClaimProto vouchers = 3;
}

message GetVoucherByCodeRequest {
  string code = 1;
}

message GetVoucherByCodeResponse {
  bool success = 1;
  string message = 2;
  VoucherDetails voucher = 3;
}

service GrpcVoucherService {
  rpc CreateVoucher(CreateVoucherRequest) returns (CreateVoucherResponse);
  rpc GetVoucherByCode(GetVoucherByCodeRequest) returns (GetVoucherByCodeResponse);
  rpc ClaimVoucher(ClaimVoucherRequest) returns (ClaimVoucherResponse);
  rpc ValidateVoucher(ValidateVoucherRequest) returns (ValidateVoucherResponse);
  rpc ApplyVoucher(ApplyVoucherRequest) returns (ApplyVoucherResponse);
  rpc GetUserVouchers(GetUserVouchersRequest) returns (GetUserVouchersResponse);
}
