syntax = "proto3";
option java_multiple_files = true;
package org.vietnamsea.authentication;


enum TokenType {
    ACCESS_TOKEN = 0;
    REFRESH_TOKEN = 1;
}

message TokenRequest {
    string token = 1;
    TokenType type = 2;
}

message TokenValidationResponse {
    bool is_valid = 1;
    string user_id = 2;
    string error_message = 3;
}

service GrpcTokenService {
    rpc VerifyToken (TokenRequest) returns (TokenValidationResponse);
}